ckanext/datagovuk/public/datagovuk.css
.account-masthead, .navbar, .site-footer, .module-search {
  background-color: rgb(11, 12, 12);
}

body {
  font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
  font-size: 16px;
  background: #FFF;
}

.masthead .navigation .nav-pills li a,
.masthead .navigation .nav-pills li.active a {

  background-color: #003647;
}

.dataset .masthead .navigation .nav-pills li a[href="/dataset"],
.dataset .masthead .navigation .nav-pills li.active a[href="/dataset"],
.publisher .masthead .navigation .nav-pills li a[href="/publisher"],
.publisher .masthead .navigation .nav-pills li.active a[href="/publisher"],
.harvest .masthead .navigation .nav-pills li a[href="/harvest"],
.harvest .masthead .navigation .nav-pills li.active a[href="/harvest"],
.site .masthead .navigation .nav-pills li a[href="/site-usage"],
.site .masthead .navigation .nav-pills li.active a[href="/site-usage"] {
  background-color: rgb(0, 130, 59);
}

.header-logo {
  font-family: "HelveticaNeue", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
  font-weight: normal;
  font-size: 24px;
  position: absolute;
  bottom: 10px;
}

a.btn-primary, a.btn-primary:hover, a.btn-primary:visited {
  background-color: rgb(0, 130, 59);
  background-image: none;
}

a.btn-primary .icon-plus-sign-alt {
  background-image: url('/images/glyphicons-halflings-white.png');
  width:14px;
  height:14px;
  background-position: 62px 64px;
}

a.btn .icon-refresh {
  background-image: url('/images/glyphicons-halflings.png');
  width:14px;
  height:14px;
  background-position: 134px 64px;
}

a.btn .icon-briefcase {
  background-image: url('/images/glyphicons-halflings.png');
  width:14px;
  height:14px;
  background-position: 36px 17px;
}

.form-horizontal .control-label {
  width: 140px;
}

.form-horizontal .controls {
  margin-left: 145px;
}

.controls #field-schema-vocabulary,
.controls #field-codelist {
  width: 100%;
}

.add-member-form .control-set label{
  margin-top: 14px;
}

label:after {
  content: "";
}

.hero {
  background: #128400;
}

.home-content {
  color: #FFF;
}

h1.home-heading {
  font-size: 42px;
}

p.home-text {
  font-size: 22px;
  line-height: 1.5;
}

.home-footer {
  color: #000;
}

h1.home-footer-heading {
  font-size: 28px;
}

p.home-footer-text {
  font-size: 16px;
  line-height: 1.5;
}

@media (max-width: 767px) {
  .toolbar .breadcrumb a {
    color: #505050;
  }
}

